javali_tests/A3/A4_keinestamSchmid/success/Positive.2.2.10.DOUBLE_DECLARATION.javali
// Rule 2.2.10: No method may have two parameters with the same name.

class Main {
	void main() {
		int i;
	}
}

class Gaga {
	int a;
	int b;

	void swap(int a, int b) {
		int i;
		i = a;
	}
}

